--- a/index.html
+++ b/index.html
@@ -1,31 +1,62 @@
-<html>
-    <head>
-        <title>HandiHub</title>
-        <link rel="stylesheet" href="style.css"> 
-    </head>
-    <body>
-        <div class="banner">
-            <div class="navbar">
-                <img src="logo7_16_203159.png" class="logo">
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <title>Webpage Design</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <div class="main">
+        <div class="navbar">
+            <div class="icon">
+                <h2 class="logo">PraRoz</h2>
+
+            </div>
+            <div class="menu">
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Bedroom</a></li>
-                    <li><a href="#">Dining</a></li>
-                    <li><a href="#">Kitchen</a></li>
-                    <li><a href="#">Backyard</a></li>
+                    <li><a href="#">HOME</a></li>
+                    <li><a href="#">ABOUT</a></li>
+                    <li><a href="#">SERVICE</a></li>
+                    <li><a href="#">DESIGN</a></li>
+                    <li><a href="#">CONTACT</a></li>
                 </ul>
             </div>
+            <div class="search">
+                <input class="srch" type="search" name="" placeholder="Type to text">
+                <a href="#"><button class="btn">Search</button></a>
+            </div>
+        </div>
+        <div class="content">
+            <h1>Web Design &<br><span>Development</span><br>Course</h1>
+            <p class="par">Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> Iusto tenetur excepturi pariatur
+                voluptatum distinctio, repudiandae tempora consectetur rem.<br> Repudiandae obcaecati maiores doloribus
+                deleniti iusto dolorem vel voluptates laudantium placeat aliquid?</p>
 
-            <div class="content">
-                <h1>DESIGN YOUR HOUSE</h1>
-                <P>Hear we can design your home. we can't break your trust.<br>If you intrested then use our website</P>
-                <div>
-                    <button type="button"><span></span> WATCH MORE</button>
-                    <button type="button"><span></span>SUBSCRIBE</button>
+            <button class="cn"><a href="#">JOIN US</a></button>
+
+            <div class="form">
+                <h2>LOGIN HERE</h2>
+                <input type="email" name="email" placeholder="Enter e-mail here">
+                <input type="password" name="password" placeholder="Enter Password Here"> 
+                <button class="btnn"><a href="#">Login</a></button>
+
+                <p class="link">Don't have an account<br>
+                    <a href="#">Sign up</a> here
+                </p>
+                <p class="liw">Login with</p>
+
+                <div class="icon">
+                    <a href="#"><ion-icon name="logo-facebook"></ion-icon></a>
+                    <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
+                    <a href="#"><ion-icon name="logo-twitter"></ion-icon></a>
+                    <a href="#"><ion-icon name="logo-google"></ion-icon></a>
+                    <a href="#"><ion-icon name="logo-skype"></ion-icon></a>
                 </div>
             </div>
-
         </div>
+    </div>
+    <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
+</body>
 
-    </body>
 </html>
